[Reach] Started work on file shares. Alot is done, alot to go though!

--- a/Branch.App/Branch.App.csproj
+++ b/Branch.App/Branch.App.csproj
@@ -185,6 +185,45 @@
     <Content Include="Content\Images\Area\Halo4\auntiediag.png" />
     <Content Include="Content\Images\Area\Halo4\leaderboard-overview.png" />
     <Content Include="Content\Images\Area\Halo4\top-ten-overview.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\0.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\1.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\10.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\11.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\12.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\13.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\14.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\15.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\16.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\17.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\18.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\19.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\2.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\20.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\21.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\22.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\23.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\24.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\25.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\26.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\27.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\28.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\29.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\3.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\30.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\31.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\32.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\33.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\34.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\35.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\36.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\37.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\38.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\4.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\5.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\6.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\7.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\8.png" />
+    <Content Include="Content\Images\Area\Reach\Assets\Gametypes\Large\9.png" />
     <Content Include="Content\Images\Area\Reach\Assets\Maps\Large\beachhead.jpg" />
     <Content Include="Content\Images\Area\Reach\Assets\Maps\Large\cp_spoiler.jpg" />
     <Content Include="Content\Images\Area\Reach\Assets\Maps\Large\exodus.jpg" />
@@ -263,15 +302,21 @@
     <Content Include="Areas\Reach\Views\History\Partials\Entries\Firefight.cshtml" />
     <Content Include="Areas\Reach\Views\History\Partials\Headers\Firefight.cshtml" />
     <Content Include="Areas\Reach\Views\Commendations\Index.cshtml" />
+    <Content Include="Areas\Reach\Views\FileShare\Index.cshtml" />
+    <Content Include="Areas\Reach\Views\FileShare\File.cshtml" />
     <None Include="Content\Styles\Areas\Halo4\_game_history.scss" />
     <Compile Include="Areas\Reach\Controllers\CommendationsController.cs" />
+    <Compile Include="Areas\Reach\Controllers\FileShareController.cs" />
     <Compile Include="Areas\Reach\Controllers\HistoryController.cs" />
     <Compile Include="Areas\Reach\Controllers\ServiceRecordController.cs" />
     <Compile Include="Areas\Reach\Filters\ValidateReachApiStatus.cs" />
     <Compile Include="Areas\Reach\Filters\ValidateReachServiceRecordFilter.cs" />
     <Compile Include="Areas\Reach\Models\Base.cs" />
     <Compile Include="Areas\Reach\Models\CommendationsViewModel.cs" />
+    <Compile Include="Areas\Reach\Models\Enums\CurrentFileSharePage.cs" />
     <Compile Include="Areas\Reach\Models\Enums\CurrentPage.cs" />
+    <Compile Include="Areas\Reach\Models\FileShareFileViewModel.cs" />
+    <Compile Include="Areas\Reach\Models\FileShareViewModel.cs" />
     <Compile Include="Areas\Reach\Models\HistoryViewModel.cs" />
     <Compile Include="Areas\Reach\Models\ServiceRecordViewModel.cs" />
     <Compile Include="Areas\Reach\ReachAreaRegistration.cs" />
@@ -328,6 +373,7 @@
     <Content Include="Views\Search\Partials\HaloReachServiceRecord.cshtml" />
     <Content Include="Content\Styles\Areas\Reach\_game_history.scss" />
     <Content Include="Content\Styles\Areas\Reach\_commendations.scss" />
+    <Content Include="Content\Styles\Areas\Reach\_file_share.scss" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
