--- a/Branch.Core/packages.config
+++ b/Branch.Core/packages.config
@@ -7,8 +7,8 @@
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
-  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
+  <package id="Sendgrid" version="4.0.0" targetFramework="net45" />
+  <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
-  <package id="Twilio" version="3.6.10" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="2.1.0.0" targetFramework="net45" />
 </packages>
