--- a/Branch.App/Branch.App.csproj
+++ b/Branch.App/Branch.App.csproj
@@ -36,7 +36,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;RELEASE;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -305,6 +305,7 @@
     <Content Include="Areas\Reach\Views\Commendations\Index.cshtml" />
     <Content Include="Areas\Reach\Views\FileShare\Index.cshtml" />
     <Content Include="Areas\Reach\Views\FileShare\File.cshtml" />
+    <Content Include="Areas\Reach\Views\FileShare\RecentScreenshots.cshtml" />
     <None Include="Content\Styles\Areas\Halo4\_game_history.scss" />
     <Compile Include="Areas\Reach\Controllers\CommendationsController.cs" />
     <Compile Include="Areas\Reach\Controllers\FileShareController.cs" />
@@ -316,11 +317,13 @@
     <Compile Include="Areas\Reach\Models\CommendationsViewModel.cs" />
     <Compile Include="Areas\Reach\Models\Enums\CurrentFileSharePage.cs" />
     <Compile Include="Areas\Reach\Models\Enums\CurrentPage.cs" />
+    <Compile Include="Areas\Reach\Models\FileShareRecentScreenshotsViewModel.cs" />
     <Compile Include="Areas\Reach\Models\FileShareFileViewModel.cs" />
     <Compile Include="Areas\Reach\Models\FileShareViewModel.cs" />
     <Compile Include="Areas\Reach\Models\HistoryViewModel.cs" />
     <Compile Include="Areas\Reach\Models\ServiceRecordViewModel.cs" />
     <Compile Include="Areas\Reach\ReachAreaRegistration.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -342,6 +345,7 @@
     <Compile Include="Helpers\Razor\Reach\MetadataHelpers.cs" />
     <Compile Include="Helpers\Razor\SocialHelpers.cs" />
     <Compile Include="Models\Enums\Game.cs" />
+    <Compile Include="Models\ErrorViewModel.cs" />
     <Compile Include="Models\GameSwitcherViewModel.cs" />
     <Compile Include="Models\SearchViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -370,11 +374,12 @@
     <Content Include="Views\Shared\GameSwitcher.cshtml" />
     <Content Include="Content\Styles\Shared\_game_switcher.scss" />
     <Content Include="Content\Styles\Areas\Reach\_service_record.scss" />
-    <Content Include="Content\Styles\Areas\Reach\_home.scss" />
     <Content Include="Views\Search\Partials\HaloReachServiceRecord.cshtml" />
     <Content Include="Content\Styles\Areas\Reach\_game_history.scss" />
     <Content Include="Content\Styles\Areas\Reach\_commendations.scss" />
     <Content Include="Content\Styles\Areas\Reach\_file_share.scss" />
+    <Content Include="Views\Error\Index.cshtml" />
+    <Content Include="Content\Styles\Areas\Reach\_home.scss" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -518,6 +523,15 @@
     <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE;REMOTEDEBUG</DefineConstants>
     <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'LocalRelease|AnyCPU'">
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>TRACE;RELEASE;LOCALRELEASE;</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
