--- a/Branch.App/Web.Debug.config
+++ b/Branch.App/Web.Debug.config
@@ -16,6 +16,7 @@
   -->
   <system.web>
 	<customErrors mode="Off" />
+	  <compilation debug="true" />
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your web.config file.
