--- a/Branch.App/Web.config
+++ b/Branch.App/Web.config
@@ -33,6 +33,11 @@
 			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
 		</handlers>
 	</system.webServer>
+	<system.net>
+		<connectionManagement>
+			<add address="*" maxconnection="1000" />
+		</connectionManagement>
+	</system.net>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
