--- a/Branch.Core/packages.config
+++ b/Branch.Core/packages.config
@@ -2,6 +2,7 @@
 
 <packages>
   <package id="EasyHttp" version="1.6.58.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="JsonFx" version="2.0.1209.2802" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
