--- a/Branch.Models/App.config
+++ b/Branch.Models/App.config
@@ -5,7 +5,8 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename='C:\Users\Alex\Source\The Tree\Branch\Application_Data\branch_development-server.mdf';Integrated Security=True;Connect Timeout=30"/>
+		<add name="DefaultConnection" providerName="System.Data.SqlClient"
+			 connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=BranchDevelopmen;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"/>
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
