--- a/Branch.Models/Branch.Models.csproj
+++ b/Branch.Models/Branch.Models.csproj
@@ -66,6 +66,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Geocoding">
+      <HintPath>..\packages\Geocoding.net.3.1.0\lib\net40\Geocoding.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Data.Edm, Version=5.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Data.Edm.5.2.0\lib\net40\Microsoft.Data.Edm.dll</HintPath>
     </Reference>
@@ -85,6 +88,14 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Services.Client" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Extensions">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.28\lib\net45\System.Net.Http.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Primitives">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.28\lib\net45\System.Net.Http.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Spatial, Version=5.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Spatial.5.2.0\lib\net40\System.Spatial.dll</HintPath>
     </Reference>
@@ -97,39 +108,38 @@
   <ItemGroup>
     <Compile Include="BaseEntity.cs" />
     <Compile Include="BaseResponse.cs" />
-    <Compile Include="Migrations\201410101415569_Added basic Authentication Model.cs" />
-    <Compile Include="Migrations\201410101415569_Added basic Authentication Model.Designer.cs">
-      <DependentUpon>201410101415569_Added basic Authentication Model.cs</DependentUpon>
+    <Compile Include="Helpers\DbSetExtentions.cs" />
+    <Compile Include="Helpers\IpGeolocation.cs" />
+    <Compile Include="Helpers\ModernAgent.cs" />
+    <Compile Include="Migrations\201410262051131_Created Authentication Model.cs" />
+    <Compile Include="Migrations\201410262051131_Created Authentication Model.Designer.cs">
+      <DependentUpon>201410262051131_Created Authentication Model.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201410101438025_Added IsValid to Authentication Model.cs" />
-    <Compile Include="Migrations\201410101438025_Added IsValid to Authentication Model.Designer.cs">
-      <DependentUpon>201410101438025_Added IsValid to Authentication Model.cs</DependentUpon>
+    <Compile Include="Migrations\201410262108294_Created Gamer, Halo 4 and Reach Identities.cs" />
+    <Compile Include="Migrations\201410262108294_Created Gamer, Halo 4 and Reach Identities.Designer.cs">
+      <DependentUpon>201410262108294_Created Gamer, Halo 4 and Reach Identities.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201410101917314_Added Identities.cs" />
-    <Compile Include="Migrations\201410101917314_Added Identities.Designer.cs">
-      <DependentUpon>201410101917314_Added Identities.cs</DependentUpon>
+    <Compile Include="Migrations\201410262140311_Fixed empty ServiceTags.cs" />
+    <Compile Include="Migrations\201410262140311_Fixed empty ServiceTags.Designer.cs">
+      <DependentUpon>201410262140311_Fixed empty ServiceTags.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201410101918073_Relationships. How cute..cs" />
-    <Compile Include="Migrations\201410101918073_Relationships. How cute..Designer.cs">
-      <DependentUpon>201410101918073_Relationships. How cute..cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201410110042273_Added ServiceTags to Indents.cs" />
-    <Compile Include="Migrations\201410110042273_Added ServiceTags to Indents.Designer.cs">
-      <DependentUpon>201410110042273_Added ServiceTags to Indents.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201410160036412_Added Branch Identity Stuff.cs" />
-    <Compile Include="Migrations\201410160036412_Added Branch Identity Stuff.Designer.cs">
-      <DependentUpon>201410160036412_Added Branch Identity Stuff.cs</DependentUpon>
+    <Compile Include="Migrations\201410271258212_Created Branch Models, added relationships.cs" />
+    <Compile Include="Migrations\201410271258212_Created Branch Models, added relationships.Designer.cs">
+      <DependentUpon>201410271258212_Created Branch Models, added relationships.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\343\Halo4Waypoint.cs" />
     <Compile Include="Services\Branch\BlogPostEntity.cs" />
     <Compile Include="Services\Branch\Enums.cs" />
+    <Compile Include="Services\Branch\Pbkdf2Response.cs" />
+    <Compile Include="Services\HostIp\Response.cs" />
     <Compile Include="Sql\Authentication.cs" />
     <Compile Include="Sql\BranchIdentity.cs" />
     <Compile Include="Sql\BranchRole.cs" />
-    <Compile Include="Sql\BranchSession.cs" />
+    <Compile Include="Sql\BranchSession.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Sql\DatabaseContext.cs" />
     <Compile Include="Sql\ReachIdentity.cs" />
     <Compile Include="Sql\Halo4Identity.cs" />
@@ -151,26 +161,19 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201410101415569_Added basic Authentication Model.resx">
-      <DependentUpon>201410101415569_Added basic Authentication Model.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201410262051131_Created Authentication Model.resx">
+      <DependentUpon>201410262051131_Created Authentication Model.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201410101438025_Added IsValid to Authentication Model.resx">
-      <DependentUpon>201410101438025_Added IsValid to Authentication Model.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201410262108294_Created Gamer, Halo 4 and Reach Identities.resx">
+      <DependentUpon>201410262108294_Created Gamer, Halo 4 and Reach Identities.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201410101917314_Added Identities.resx">
-      <DependentUpon>201410101917314_Added Identities.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201410262140311_Fixed empty ServiceTags.resx">
+      <DependentUpon>201410262140311_Fixed empty ServiceTags.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201410101918073_Relationships. How cute..resx">
-      <DependentUpon>201410101918073_Relationships. How cute..cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201410110042273_Added ServiceTags to Indents.resx">
-      <DependentUpon>201410110042273_Added ServiceTags to Indents.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201410160036412_Added Branch Identity Stuff.resx">
-      <DependentUpon>201410160036412_Added Branch Identity Stuff.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201410271258212_Created Branch Models, added relationships.resx">
+      <DependentUpon>201410271258212_Created Branch Models, added relationships.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Import Project="$(VSToolsPath)\Web\Microsoft.Web.Publishing.targets" Condition="'$(VSToolsPath)' != ''" />
@@ -187,5 +190,10 @@
         <TargetPath>$(TargetName).vshost$(TargetExt).config</TargetPath>
       </AppConfigWithTargetPath>
     </ItemGroup>
+  </Target>
+  <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
+  <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
+    <Error Condition="!Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=317567." HelpKeyword="BCLBUILD2001" />
+    <Error Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="The build restored NuGet packages. Build the project again to include these packages in the build. For more information, see http://go.microsoft.com/fwlink/?LinkID=317568." HelpKeyword="BCLBUILD2002" />
   </Target>
 </Project>
