--- a/Branch.Models/packages.config
+++ b/Branch.Models/packages.config
@@ -2,8 +2,12 @@
 
 <packages>
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="Geocoding.net" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
