--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
 	"name": "cuvva-log",
-	"version": "0.0.1",
-	"description": "Super simple standardised logs.",
+	"version": "1.1.3",
+	"description": "Super simple standardised logs. If you're not with Cuvva, you're probably in the wrong place.",
 	"homepage": "https://github.com/cuvva/log",
 	"bugs": "https://github.com/cuvva/log/issues",
 
 	"license": "MIT",
-	"author": "Will Evans (http://will3942.com)",
+	"author": "Jack Fransham (http://jackfransham.com)",
 
 	"main": "lib/index.js",
 
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/cuvva/disco-client-node.git"
+		"url": "https://github.com/cuvva/log.git"
 	},
 
 	"scripts": {
