--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cuvva-log",
-	"version": "1.1.3",
+	"version": "1.2.6",
 	"description": "Super simple standardised logs. If you're not with Cuvva, you're probably in the wrong place.",
 	"homepage": "https://github.com/cuvva/log",
 	"bugs": "https://github.com/cuvva/log/issues",
@@ -16,9 +16,9 @@
 	},
 
 	"scripts": {
-		"debug": "nodemon --exec babel-node -- --stage 1 lib/index.js",
-		"start": "babel-node --stage 1 lib/index.js",
-		"test" : "babel-tape-runner \"test/index.js\""
+		"debug": "nodemon lib/index.js",
+		"start": "node lib/index.js",
+		"test" : "tape \"test/index.js\""
 	},
 
 	"dependencies": {
