setup for travis testing
incl. coverage testing

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	},
 
 	"scripts": {
-		"test": "tape \"test/index.js\""
+		"test": "tape test/index.js",
+		"test-travis": "istanbul cover test/index.js --report lcovonly"
 	},
 
 	"dependencies": {
@@ -25,9 +26,8 @@
 	},
 
 	"devDependencies": {
+		"coveralls": "^2.11.2",
 		"istanbul": "^0.3.16",
-		"nodemon": "^1.3.6",
-		"supertest": "^1.0.1",
 		"tape": "^4.0.0",
 		"test-console": "^1.0.0"
 	},
