Change package name to "cuvva-log-sentry" to line up with repo name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sentry-handler",
+	"name": "cuvva-log-sentry",
 	"version": "0.2.3",
 	"description": "Sentry handler for cuvva-log.",
 	"homepage": "https://github.com/cuvva/sentry-handler-node",
