added halo 4 auth support

--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,9 @@
 {
 	"sentryDSN": "",
+	"halo4": {
+		"account": "your_account@outlook.com",
+		"password": "your_password"
+	},
 	"xboxLive": {
 		"account": "your_account@outlook.com",
 		"password": "your_password"
