--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "cuvva-log",
+	"name": "branch-log",
 	"version": "0.9.1",
 	"description": "Super simple standardized logging used by all Cuvva systems",
-	"homepage": "https://github.com/cuvva/cuvva-log-node",
-	"bugs": "https://github.com/cuvva/cuvva-log-node/issues",
+	"homepage": "https://github.com/branch-app/log-node",
+	"bugs": "https://github.com/branch-app/log-node/issues",
 
 	"license": "MIT",
 	"author": "Cuvva (https://cuvva.co)",
@@ -12,7 +12,7 @@
 
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/cuvva/cuvva-log-node.git"
+		"url": "https://github.com/branch-app/log-node.git"
 	},
 
 	"scripts": {
