--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "babel-polyfill": "^6.16.0",
     "body-parser": "^1.16.1",
-    "cuvva-log": "^0.9.1",
-    "cuvva-log-sentry": "^0.5.2",
+    "branch-log": "^0.9.1",
+    "branch-log-sentry": "^0.5.2",
     "express": "^4.14.0",
     "express-promise-router": "^1.1.1",
     "json-inflector": "^1.1.0",
