Updated configuration model

--- a/config.json.example
+++ b/config.json.example
@@ -1,8 +1,5 @@
 {
-	"sentryDSN": "",
 	"port": "",
-	"mongoDb": {
-		"connectionString": "",
-		"databaseName": ""
-	}
+	"mongoConnectionString": "",
+	"mongoDatabaseName": ""
 }
