new format for mongo data

--- a/config.json
+++ b/config.json
@@ -1,5 +1,9 @@
 {
 	"port": "",
-	"mongoConnectionString": "",
-	"mongoDatabaseName": ""
+	"mongo": {
+		"host": "",
+		"database": "",
+		"username": "",
+		"password": ""
+	}
 }
