Added shims for bootstrap js to work 👍🏻 and other stuffs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/node_modules/
-/built/
-/public/css/
-/public/javascript/
+node_modules/
+built/
+public/css/
+public/javascript/
 
 config.*.json
+bower_components
