--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-	"name": "branch-log",
+	"name": "@branch-app/log",
 	"version": "0.9.1",
+	"private": false,
 	"description": "Super simple standardized logging used by all of Branch's node services.",
 	"homepage": "https://github.com/branch-app/log-node",
 	"bugs": "https://github.com/branch-app/log-node/issues",
 
 	"license": "MIT",
-	"author": "Branch App (https://github.com/branch-app)",
+	"author": "Alex Forbes-Reed <npm@alx.red>",
 
 	"main": "lib/index.js",
 
@@ -21,9 +22,9 @@
 	},
 
 	"devDependencies": {
-		"coveralls": "^2.11.2",
-		"istanbul": "^0.3.16",
-		"tape": "^4.0.0",
+		"coveralls": "^2.13.1",
+		"istanbul": "^0.3.22",
+		"tape": "^4.6.3",
 		"test-console": "^1.0.0"
 	}
 }
